<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cycle Training</string>

    <string name="training_create">Add workout</string>
    <string name="training_journal">Training diary</string>
    <string name="statistic">Statistic</string>

    <string name="exercise">Exercise</string>
    <string name="muscle_group">Muscle group</string>
    <string name="experience">Experience</string>
    <string name="repetition_maximum">Repetition maximum</string>
    <string name="begin_date">Begin date</string>
    <string name="show_cycle">Program preview</string>
    <string name="sort">Workout sorting</string>

    <string name="rm">1 RM</string>
    <string name="cycle">Program</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="done">Done</string>
    <string name="status">Status</string>
    <string name="kg">kg</string>
    <string name="number">№</string>

    <string name="action_help">Manual</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_training_create">Add workout</string>
    <string name="action_exercise_create">Add exercise</string>
    <string name="action_timer">Timer</string>
    <string name="action_add_set">Add set</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="error_input">Input error</string>
    <string name="toast_input">Choose your rep count in %d set</string>
    <string name="toast_chart_error">Not enough data to create chart</string>
    <string name="toast_backup_successful">Backup successful</string>
    <string name="toast_restore_successful">Restore successful</string>
    <string name="toast_no_backup_files">Уou don\'t have backup files</string>
    <string name="toast_back_pressed">Please press Back button again to exit</string>
    <string name="toast_sort_error">To sort you need at least two workouts</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_icon">Drawer icon</string>

    <string name="set_edit">Edit</string>
    <string name="set_edit_dialog_title">Edit set</string>
    <string name="comment">Comment</string>

    <!--Preferences-->
    <string name="pref_cat_timer">Timer</string>
    <string name="pref_title_timer_time">Timer</string>
    <string name="pref_summary_timer_time">Rest time between sets</string>
    <string name="pref_dialog_title_timer_time">Time in seconds</string>
    <string name="pref_cat_other">Other</string>
    <string name="pref_title_first_day_of_week">First day of week</string>
    <string name="pref_summary_first_day_of_week">First day of week in training diary</string>
    <string name="pref_title_vibration">Vibration</string>
    <string name="pref_summary_vibration">Vibrate when the timer has finished</string>
    <string name="pref_cat_backup">Backup</string>
    <string name="pref_title_backup">Save</string>
    <string name="pref_summary_backup">Save backup on a SD card</string>
    <string name="pref_title_restore">Restore</string>
    <string name="pref_summary_restore">Restore selected backup</string>

    <string name="none_trainings">This week you have no training</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="action_calendar">Calendar</string>
    <string name="action_week">Week view</string>
    <string name="date_dialog_title">Choose the date</string>
    <string name="round_weight">Round weight to</string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_move">Move</string>
    <string name="action_mesocycle">Show program</string>

    <string name="showcase_title">Welcome!</string>
    <string name="showcase_first_start_text">Go to the menu and add workouts to your training
        diary
    </string>

    <!--Training actions-->
    <string name="full_delete">Delete cycle</string>
    <string name="save_done">Remain done</string>
    <string name="on_delete_title">Delete</string>
    <string name="on_missed_title">Workout was missed</string>
    <string name="action_run">Run</string>
    <string name="expand_collapse">Expand/Collapse</string>

    <!--Search-->
    <string name="programs">Programs</string>
    <string name="search">Search</string>
    <string name="goal">Goal</string>
    <string name="weeks">Weeks</string>
    <string name="trainings_in_week">Workout per week</string>
    <string name="not_selected">Not selected</string>
    <string name="filter_params">Search parameters</string>
    <string name="cycles">Select program</string>
    <string name="action_reset">Reset</string>
    <string name="choose_exercise">Select exercise</string>
    <string name="type">Type</string>
    <string name="muscles">Muscles</string>
    <string name="name">Name</string>
    <string name="exercises">Exercises</string>

    <!--Exercise types-->
    <string name="compound">Compound</string>
    <string name="isolated">Isolated</string>

    <!--Muscles-->
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="legs">Legs</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="abs">Abs</string>

    <!--Exercises-->
    <string name="bench_press">Bench press</string>
    <string name="deadlift">Deadlift</string>
    <string name="back_squat">Back squat</string>
    <string name="front_squat">Front squat</string>
    <string name="bent_over_row">Bent over row</string>
    <string name="upright_row">Upright row</string>
    <string name="military_press">Military press</string>
    <string name="triceps_extension">Triceps extension</string>
    <string name="dumbbel_fly">Dumbbel fly</string>
    <string name="incline_bench_press">Incline bench press</string>
    <string name="barbell_curl">Barbell curl</string>
    <string name="hammer_curl">Hammer curl</string>
    <string name="dip">Dip</string>
    <string name="leg_press">Leg press</string>
    <string name="lunge">Lunge</string>
    <string name="good_morning">Good morning</string>
    <string name="pull_up">Pull-up</string>
    <string name="seated_row">Seated row</string>
    <string name="pulldown">Pulldown</string>
    <string name="shrug">Shrug</string>

    <!--Purposes-->
    <string name="hypertrophy">Hypertrophy</string>
    <string name="strength">Strength</string>
    <string name="endurance">Endurance</string>

    <!--Programs-->
    <string name="fifty_pounds_high_rep">50 pounds high-rep</string>
    <string name="hypertrophy_high_rep">Hypertrophy high-rep</string>
    <string name="hypertrophy_program">Hypertrophy</string>
    <string name="strength_volume">Strength</string>
    <string name="endurance_program">Endurance</string>
    <string name="thirty_reps">30 reps</string>
    <string name="v5_3_1">5/3/1</string>
    <string name="v8_6_3">8/6/3</string>
    <string name="v10_8_6">10/8/6</string>
    <string name="v12_10_8">12/10/8</string>

    <!--Training comments-->
    <string name="v5_3_1_max">On the last set you can do as many reps as possible.</string>
    <string name="v5_3_1_end">After completing mesocycle, add 5 pounds to your 1RM for upper body,
        and 10 pounds for
        lower body.
    </string>
    <string name="reps_ro_description">RO - For a rep out, do the target weight at a 4-0-2 tempo
        till failure.
    </string>
    <string name="reps_f_description">F - Do set to failure, if you can\'t lift more than 6 times,
        drop 1RM by 5 pound
        and if you can lift it more than 10 times increase your 1RM by pound.
    </string>
    <string name="fifty_pounds_description">RO - For a rep out, do the target weight at a 4-0-2
        tempo till failure.\nF -
        Do set to failure, if you can\'t lift more than 6 times, drop 1RM by 5 pound and if you can
        lift it more than 10
        times increase your 1RM by pound
    </string>

    <!--Statistic-->
    <string name="values">Values</string>
    <string name="reps_weight">Reps/Weight</string>
    <string name="weight_date">Weight/Date</string>
    <string name="weight_reps_date">Weight+Reps/Date</string>
    <string name="reps_stat">Reps</string>

    <string name="result">Result</string>
    <string name="result_max">Maximum</string>
    <string name="result_avg">Average</string>

    <string name="period">Period</string>
    <string name="period_all">All time</string>
    <string name="period_year">Year</string>
    <string name="period_half_year">Half-year</string>
    <string name="period_three_months">3 months</string>
    <string name="period_month">Month</string>

    <string name="build_chart">Build chart</string>
    <string name="backup">Backup</string>
    <string name="toast_backup_failed">Backup failed</string>

</resources>
