<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cat_timer">
        <EditTextPreference
            android:title="@string/pref_title_timer_time"
            android:summary="@string/pref_summary_timer_time"
            android:dialogTitle="@string/pref_dialog_title_timer_time"
            android:defaultValue="90"
            android:key="pref_key_timer_value"
            android:inputType="number"
            />
        <CheckBoxPreference
            android:title="@string/pref_title_vibration"
            android:summary="@string/pref_summary_vibration"
            android:defaultValue="false"
            android:key="pref_key_is_vibrate_timer"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_other">
        <ListPreference
            android:title="@string/pref_title_first_day_of_week"
            android:summary="@string/pref_summary_first_day_of_week"
            android:defaultValue="2"
            android:key="pref_key_first_day_of_week"
            android:entries="@array/first_days_of_week"
            android:entryValues="@array/first_days_of_week_values"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_backup">
        <Preference
            android:title="@string/pref_title_backup"
            android:summary="@string/pref_summary_backup"
            android:key="pref_key_backup"
            />
        <com.kozzztya.cycletraining.customviews.RestoreDialogPreference
            android:title="@string/pref_title_restore"
            android:summary="@string/pref_summary_restore"
            android:key="pref_key_restore"
            />
    </PreferenceCategory>
</PreferenceScreen>