<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_help" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/action_about" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/action_exit" />

</menu>