<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="10"
        android:title="@string/action_add_set"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_add"
        />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="20"
        android:title="@string/sort"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_sort"
        />

    <item
        android:id="@+id/action_timer"
        android:orderInCategory="30"
        android:title="@string/action_timer"
        app:showAsAction="always"
        app:actionLayout="@layout/timer_menu_item"
        />

</menu>