<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_params"
        android:paddingLeft="4dp"
        style="@style/sectionHeader"/>

    <com.kozzztya.cycletraining.utils.HintSpinner
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/spinnerPurpose"
        style="@style/SpinnerMyAppCompat"
        android:prompt="@string/purpose"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.kozzztya.cycletraining.utils.HintSpinner
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/spinnerWeeks"
            style="@style/SpinnerMyAppCompat"
            android:prompt="@string/weeks"
            android:layout_weight="1"/>

        <com.kozzztya.cycletraining.utils.HintSpinner
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/spinnerTrainingsInWeek"
            android:prompt="@string/trainings_in_week"
            style="@style/SpinnerMyAppCompat"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycles"
        android:paddingLeft="4dp"
        style="@style/sectionHeader"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewPrograms"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"/>


</LinearLayout>