<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:clipToPadding="false"
        android:layout_marginLeft="@dimen/indent_small"
        android:layout_marginRight="@dimen/indent_small"
        android:layout_marginBottom="@dimen/indent_small"
        >

        <android.support.v7.internal.widget.CompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            style="@style/sectionHeader"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/input_view_min_height"
            android:id="@+id/exerciseChooser"
            android:paddingLeft="@dimen/indent_big"
            style="?android:attr/spinnerStyle"/>

        <android.support.v7.internal.widget.CompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycle"
            android:id="@+id/textViewProgram"
            style="@style/sectionHeader"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_view_min_height"
            android:id="@+id/programChooser"
            style="?android:attr/spinnerStyle"
            android:paddingLeft="@dimen/indent_big"
            android:text="Вес"
            />

        <android.support.v7.internal.widget.CompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repetition_maximum"
            android:id="@+id/textViewBestResult"
            style="@style/sectionHeader"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dip"
                    android:layout_height="@dimen/input_view_min_height"
                    android:id="@+id/editTextWeight"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"
                    android:layout_column="0"
                    android:hint="@string/weight_kg"
                    />

                <EditText
                    android:layout_width="0dip"
                    android:layout_height="@dimen/input_view_min_height"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextReps"
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:hint="@string/reps"
                    />
            </TableRow>
        </TableLayout>

        <android.support.v7.internal.widget.CompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_weight"
            android:id="@+id/textView"
            style="@style/sectionHeader"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_view_min_height"
            android:id="@+id/spinnerRound"
            android:entries="@array/round_weight"
            style="?android:attr/spinnerStyle"
            />

        <android.support.v7.internal.widget.CompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:id="@+id/textViewBeginDate"
            style="@style/sectionHeader"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_view_min_height"
            android:id="@+id/dateChooser"
            style="?android:attr/spinnerStyle"
            android:paddingLeft="@dimen/indent_big"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_cycle"
            android:id="@+id/buttonConfirm"
            />
    </LinearLayout>

    <include layout="@layout/drawer_listview"/>

</android.support.v4.widget.DrawerLayout>