<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_gravity="center"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin"
              android:paddingLeft="@dimen/card_margin"
              android:paddingRight="@dimen/card_margin"
    >

    <android.support.v7.internal.widget.CompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        style="@style/SectionHeader"
        android:paddingLeft="0dp"
        android:text="@string/number"
        android:gravity="left"
        />

    <android.support.v7.internal.widget.CompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SectionHeader"
        android:paddingLeft="0dp"
        android:text="@string/weight"
        android:gravity="center"
        android:layout_weight="10"
        />

    <android.support.v7.internal.widget.CompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SectionHeader"
        android:paddingLeft="0dp"
        android:text="@string/reps"
        android:gravity="center"
        android:layout_weight="10"
        android:singleLine="true"
        />

    <!--Stub for column centering-->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"
        />

</LinearLayout>

