<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_marginLeft="@dimen/regular_padding_big"
              android:layout_marginRight="@dimen/regular_padding_big"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <android.support.v7.internal.widget.CompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/textView"
            android:layout_weight="1"
            style="@style/SectionHeader"/>

        <android.support.v7.internal.widget.CompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:id="@+id/textView2"
            android:layout_weight="1"
            style="@style/SectionHeader"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:selectAllOnFocus="true"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editTextReps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:selectAllOnFocus="true"
            android:inputType="number"
            />

    </LinearLayout>

    <android.support.v7.internal.widget.CompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:id="@+id/textView3"
        style="@style/SectionHeader"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextComment"
        android:inputType="text"/>
</LinearLayout>