<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:stretchColumns="*">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewRM"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textViewRM"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="3"
                android:id="@+id/editTextRM"/>
    </LinearLayout>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.ActionBar.Solid"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cycle"
                android:id="@+id/textViewCycle" android:layout_weight="1" android:gravity="center"
                android:textSize="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:id="@+id/textViewSets" android:layout_weight="1" android:gravity="center"
                android:textSize="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                android:id="@+id/textViewReps" android:layout_weight="1" android:gravity="center"
                android:textSize="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:id="@+id/textViewWeight" android:layout_weight="1" android:gravity="center"
                />
    </TableRow>
    <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:id="@+id/tableRow">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="1" android:id="@+id/textView" android:layout_weight="1"
                  android:gravity="center" style="@android:style/Widget.Holo.Light.EditText"
                  android:textSize="14dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="7" android:id="@+id/textView2" android:layout_weight="1"
                  android:gravity="center" style="@android:style/Widget.Holo.Light.EditText"
                  android:textSize="14dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="15" android:id="@+id/textView3" android:layout_weight="1"
                  android:gravity="center" style="@android:style/Widget.Holo.Light.EditText"
                  android:textSize="14dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="102" android:id="@+id/textView4" android:layout_weight="1"
                  android:gravity="center" style="@android:style/Widget.Holo.Light.EditText"
                  android:textSize="14dp"/>
    </TableRow>

</TableLayout>